<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ExamInsertion">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/salvaB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF8BDF36"
        android:text="@string/salva"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/tVTitolo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/inserire_dati_esame"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:textAlignment="center"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nome_esame"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eTNomeEsameM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/inserire_nome_esame_max_30_caratteri"
                android:inputType="textPersonName"
                android:onClick="checkExamName"
                android:textAlignment="textStart"
                android:importantForAutofill="no" />
        </LinearLayout>

        <Button
            android:id="@+id/dataB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/data" />

        <TextView
            android:id="@+id/tVDataM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/oraB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/ora" />

        <TextView
            android:id="@+id/tVOraM"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>